# fastapi_asyncpg

./: .gitignore  .isort.cfg  CHANGELOG.rst  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ci.yml
.github/workflows/: python-package.yml
examples/: __init__.py
fastapi_asyncpg/: __init__.py  sql.py
tests/: conftest.py  data.sql  test_con_rollback.py  test_db.py
